@@ -5,6 +5,8 @@ Version 0.6
 -----------
 (released Dec XX, 2006)
 
+- Added Apache configuration lexer (thanks to Tim Hatch).
+
 - Improved guessing methods for various lexers.
 
 - Added `@media` support to CSS lexer (thanks to Tim Hatch).
